AUTOMAKE_OPTIONS = subdir-objects

noinst_LIBRARIES = libservice_control_client.a

libservice_control_client_a_CPPFLAGS = $(AM_CPPFLAGS) \
  -I$(top_srcdir) \
  -I$(top_srcdir)/third_party/config

libservice_control_client_a_SOURCES = \
  utils/distribution_helper.h \
  utils/distribution_helper.cc



